<resources>
    <string name="app_name">FairShare</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create a new account</string>
    <string name="dont_have_account">Don´t have an account?</string>
    <string name="new_account">Create new\nAccount</string>
    <string name="sign_up">Sign up</string>
    <string name="already_registered">Already Registered?</string>
    <string name="login_here">Log in here.</string>
    <string name="enter_email">Enter the email.</string>
    <string name="enter_password">Enter the password.</string>
    <string name="account_created">Account created successfully!</string>
    <string name="account_creation_fail">Account creation failed. Please check your credentials and try again.</string>
    <string name="enter_email_password">Enter both email and password.</string>
    <string name="title_activity_menut_test">Menu Test</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="mn_cerrar_sesion">Log out</string>
    <string name="mn_salir_app">Exit</string>
    <string name="btn_yes">Yes</string>
    <string name="mn_delete">Delete</string>
    <string name="hold_to_delete">Hold and item to delete it</string>
    <string name="btn_add_new">+</string>
    <string name="hint_password_confirm">Confirm password</string>
    <string name="et_error_password">Password is required</string>
    <string name="et_error_email">Email is required</string>
    <string name="enter_password_char">Password must be at least 5 characters</string>
    <string name="enter_password_noMatch">Passwords do not match</string>
    <string name="set_error_email_invalid">Please enter a valid email address</string>
    <string name="et_enter_password_digit">The password must contain at least one number</string>
    <string name="et_enter_password_letter">The password must contain at least one letter</string>
    <string name="user_name">Username</string>
    <string name="fairShare_list_cancelled">Cancelled</string>
    <string name="tit_dialog_exit">Confirm exit</string>
    <string name="message_dialog_exit">Are you sure you want to leave?</string>
    <string name="btn_no">No</string>
    <string name="new_fairshare">New FairShare</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="expense_for">Who is this expense for?</string>
    <string name="btn_save">Save</string>
    <string name="select_user">Choose user</string>
    <string name="payed_by">Payed by</string>
    <string name="error_fetch_user_main">Unable to fetch user</string>
    <string name="new_expense">New expense</string>
    <string name="description">Description</string>
    <string name="new_participant">Participant email</string>
    <string name="btn_add">Add</string>
    <string name="participants">"Participants: "</string>
    <string name="members">Members</string>
    <string name="cant_add_sef_or_existing">You cannot add yourself nor an already existing user in the list</string>
    <string name="user_object_created">User object created</string>
    <string name="error_creating_user_object">Error creating user object</string>
    <string name="unable_to_upload_fairShare">Unable to upload new FairShare</string>
    <string name="new_fairShare_uploaded">New fairShare uploaded!</string>
    <string name="invalid_email">Invalid email adress</string>

    <string name="user_nametv">"Username: "</string>
    <string name="emailtv">"Email: "</string>

    <string name="complete_all_fields">You must fill in all fields</string>
    <string name="unable_fetch_fairShare">Unable to fetch fairShare</string>
    <string name="db_error">Database Error</string>
    <string name="unable_fetch_username">Unable to fetch username</string>
    <string name="username_not_found">Username not found</string>
    <string name="user_id_null">User id not found</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_balance">BALANCE</string>
    <string name="btn_expenses">EXPENSES</string>

    <string name="text_tv_my_total">MY TOTAL</string>
    <string name="text_tv_total_expenses">TOTAL EXPENSES</string>
    <string name="title_dos_puntos">"Title: "</string>
    <string name="description_dos_puntos">"Description: "</string>
    <string name="euro">" €"</string>
    <string name="date_example">01/01/2024</string>
    <string name="payed_by_dospuntos">"Payed by: "</string>
    <string name="unable_to_upload_balance">Unable to upload new Balance item</string>
    <string name="must_select_user_spinner">You must select a user</string>
    <string name="minimun_amount">The amout must be equal or greater than the number of participants</string>
    <string name="unable_find_balance">Unable to find balance</string>
    <string name="unable_fetch_balance">Unable to fetch balance</string>
    <string name="expese_created">Expense created</string>
    <string name="minimun_participants">There must be at least two participants</string>
    <string name="enter_username">Enter a username</string>


</resources>
