<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:background="#E6E6DD"
    tools:context=".autentication.LoginActivity">


    <ImageView
        android:layout_marginTop="@dimen/margin_top_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logosinfondo" />

    <TextView
        android:layout_marginTop="@dimen/margin_top_texto_login"
        android:text="@string/login"
        android:textSize="@dimen/titles"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/sign_in"
        android:textSize="@dimen/text"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <!--EMAIL-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:background="#202B2B2B"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <!--CONTRASEÑA-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:background="#202B2B2B"
            />
    </com.google.android.material.textfield.TextInputLayout>




    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:backgroundTint="#802B2B2B"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dont_have_account"
            android:layout_marginTop="20dp"
            android:gravity="end"
            android:textSize="@dimen/text" />

        <TextView
            android:id="@+id/tvNewAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_account"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:gravity="start"
            android:textSize="@dimen/text"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>