<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    android:background="@color/share"
    tools:context=".ListExpenses">



    <LinearLayout
        android:id="@+id/llBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">


        <Button
            android:id="@+id/btnExpenses"
            android:layout_weight="2"
            android:textColor="@color/fair_grey"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/btn_expenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="17sp" />


        <Button
            android:id="@+id/btnBalance"
            android:layout_weight="2"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/btn_balance"
            android:textColor="@color/fair_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="17sp" />

    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvListExpenses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llImagen"
        app:layout_constraintBottom_toTopOf="@id/llHorzontalParent"/>


    <LinearLayout
        android:id="@+id/llHorzontalParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/llVerticalLeft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/margin_cardview"
            android:orientation="vertical"
            android:gravity="left">

            <TextView
                android:id="@+id/tvMyTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/text_tv_my_total"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvMyTotalAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0.00"
                        android:textStyle="bold"
                        android:gravity="left"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/euro"/>

                </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnNewExpense"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:textSize="24sp"
            android:background="@drawable/rounded_button_background"
            android:text="@string/btn_add_new"/>

        <LinearLayout
            android:id="@+id/llVerticalRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_cardview"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="right">

            <TextView
                android:id="@+id/tvTotalExpenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/text_tv_total_expenses"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTotalExpensesAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="0.00"
                    android:gravity="right"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/euro"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/llBotones">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imgExpenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/line"
                app:layout_constraintTop_toBottomOf="@id/btnExpenses"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imgBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/line"
                app:layout_constraintTop_toBottomOf="@id/btnBalance"/>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@id/llImagen" />

</androidx.constraintlayout.widget.ConstraintLayout>
